--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,16 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "/images/World Bank.jpg",
+            "src": "/images/dailynews-logo.svg",
             "sizes": "192x192",
-            "type": "image/jpeg"
+            "type": "image/svg+xml",
+            "purpose": "any"
         },
         {
-            "src": "/images/World Bank.jpg",
+            "src": "/images/dailynews-logo.svg",
             "sizes": "512x512",
-            "type": "image/jpeg"
+            "type": "image/svg+xml",
+            "purpose": "any"
         }
     ]
 }
