--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
     "hosting": {
+        "site": "dailynews-app-2026",
         "public": "public",
         "ignore": [
             "firebase.json",
